# agora-code

./: .gitignore  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE_HOOKS.md  KIRO.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  pyproject.toml  setup.sh  test_inject_demo.py
.claude/: agora-code-config.json  hooks.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: on-bash.sh  on-edit.sh  on-grep.sh  on-prompt.sh  on-read.sh  on-stop.sh  on-subagent.sh  on-tool-failure.sh  pre-agent.sh  pre-read.sh
.cursor/: hooks.json
.cursor/hooks/: after-file-edit.sh  after-shell.sh  pre-compact.sh  pre-read.sh  session-start.sh
.cursor/rules/: agora.mdc
.gemini/: settings.json
.github/hooks/: agora-code.json
.kiro/hooks/: agora-auto-checkpoint.kiro.hook  agora-index-after-editcode.kiro.hook  agora-index-after-strreplace.kiro.hook  agora-index-after-write.kiro.hook  agora-index-on-save.kiro.hook  agora-inject-before-task.kiro.hook  agora-log-grep-results.kiro.hook  agora-session-inject.kiro.hook  agora-summarize-before-read.kiro.hook  agora-summarize-before-readfile.kiro.hook  agora-summarize-before-readmulti.kiro.hook  agora-summarize-interaction.kiro.hook  checkpoint-after-task.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: agora-memory.md
agora_code/: SKILL.md  __init__.py  agent.py  claude_instructions.md  cli.py  indexer.py  log.py  memory_layer.py  memory_server.py  models.py  session.py  summarizer.py  tldr.py  vector_store.py  workflows.py
docs/: CLAUDE_SKILLS_IMPLEMENTATION.md  DATABASE_AND_STRUCTURED_LAYER.md  FULL_PICTURE.md  THROWAWAY_TEST.md
hooks/: bootstrap.sh  hooks.json  on-bash.sh  on-edit.sh  on-grep.sh  on-prompt.sh  on-read.sh  on-stop.sh  on-subagent.sh  on-tool-failure.sh  pre-read.sh
power-agora-memory/: POWER.md  mcp.json
styles/: agora-code.md
tests/: conftest.py  test_extractors_ast.py  test_extractors_openapi.py  test_hooks.py  test_integration.py  test_mcp_server.py  test_memory.py  test_memory_tools.py  test_session.py  test_tldr.py
(+8 files in other folders)
