[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agora-code"
version = "0.1.0"
description = "Persistent session memory and symbol indexing for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Agora" }]
keywords = ["ai", "agent", "api", "mcp", "openapi", "codebase"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

# Core: click for CLI, tree-sitter for structural summarization, tiktoken for
# accurate token counting. Both have graceful fallbacks but are always installed.
dependencies = [
    "click>=8.0",
    "tree-sitter-language-pack>=0.13",   # AST-based file summarizer (170+ langs)
    "tiktoken>=0.7",                      # Accurate BPE token counting
]

[project.optional-dependencies]
# Tier 3 extractors
openai  = ["openai>=1.0"]
gemini  = ["google-generativeai>=0.8"]

# Agent LLM backend
llm     = ["openai>=1.0"]

# Vector similarity search in SQLite (semantic recall, learning search)
# Falls back to FTS5 keyword search when not installed.
vec     = ["sqlite-vec>=0.1"]

# Local embeddings — fully offline, no API key needed
# Uses bge-small-en-v1.5 by default (~130MB). Set LOCAL_EMBEDDING_MODEL to override.
local   = ["sentence-transformers>=2.2"]

# Memory integration
memory  = ["agora-mem>=0.1.0"]

# --- Enterprise edition ---
enterprise = [
    "supabase>=2.0",
    "agora-mem[supabase]>=0.1.0",
]

# Dev / test
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

# Everything
all = [
    "agora-code[openai,gemini,llm,vec,local,memory,enterprise,dev]",
]

[project.scripts]
agora-code = "agora_code.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agora_code"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
